--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trivia",
-  "homepage": "https://michaeleliot.github.com/trivia",
+  "homepage": "https://michaeleliot.github.io/trivia/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
